[package]
name = "node-rs"
version = "0.1.2"
authors = ["Andrew Gaspar <andrew.gaspar@outlook.com>"]
repository = "https://github.com/AndrewGaspar/node-rs"
homepage = "https://github.com/AndrewGaspar/node-rs"
documentation = "https://docs.rs/node-rs/*/node-rs/"
license = "MIT"
readme = "README.md"
keywords = ["web", "node.js", "wasm", "webasm", "javascript", "node"]
categories = ["api-bindings", "web-programming"]
description = "Rust bindings for node.js using stdweb"

[dependencies]
stdweb = "0.4.8"
stdweb-derive = "0.4.0"

[features]
"docs-rs" = ["stdweb/docs-rs"]

[package.metadata.docs.rs]
features = ["docs-rs"]
all-features = false
no-default-features = true