[package]
name = "node-rs"
version = "0.1.4"
authors = ["Andrew Gaspar <andrew.gaspar@outlook.com>"]
repository = "https://github.com/AndrewGaspar/node-rs"
homepage = "https://github.com/AndrewGaspar/node-rs"
documentation = "https://docs.rs/node-rs/*/"
license = "MIT"
readme = "README.md"
keywords = ["web", "nodejs", "wasm", "webasm", "javascript"]
categories = ["api-bindings", "web-programming"]
description = "Rust bindings for node.js using stdweb"

[dependencies]
stdweb-derive = "0.5.0"

[dependencies.stdweb]
version = "0.4.9"
default-features = false

[features]
"docs-rs" = ["stdweb/docs-rs"]

[package.metadata.docs.rs]
features = ["docs-rs"]
all-features = false
no-default-features = true